Begin analysing transactions

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -223,8 +223,7 @@
    ],
    "source": [
     "district_id_freq = accounts['district_id'].value_counts().iloc[:4]\n",
-    "print(district_id_freq.plot.bar())\n",
-    "# accounts.district_id.plot.scatter(x='dis')"
+    "print(district_id_freq.plot.bar())"
    ]
   },
   {
@@ -303,6 +302,417 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Analysing transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trans_id</th>\n",
+       "      <th>account_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>operation</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>k_symbol</th>\n",
+       "      <th>bank</th>\n",
+       "      <th>account</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1548749</td>\n",
+       "      <td>5270</td>\n",
+       "      <td>credit</td>\n",
+       "      <td>credit in cash</td>\n",
+       "      <td>32.79</td>\n",
+       "      <td>32.79</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1548750</td>\n",
+       "      <td>5270</td>\n",
+       "      <td>credit</td>\n",
+       "      <td>collection from another bank</td>\n",
+       "      <td>1833.98</td>\n",
+       "      <td>1866.76</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>IJ</td>\n",
+       "      <td>80269753.0</td>\n",
+       "      <td>93</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3393738</td>\n",
+       "      <td>11265</td>\n",
+       "      <td>credit</td>\n",
+       "      <td>credit in cash</td>\n",
+       "      <td>40.98</td>\n",
+       "      <td>40.98</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3122924</td>\n",
+       "      <td>10364</td>\n",
+       "      <td>credit</td>\n",
+       "      <td>credit in cash</td>\n",
+       "      <td>45.08</td>\n",
+       "      <td>45.08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1121963</td>\n",
+       "      <td>3834</td>\n",
+       "      <td>credit</td>\n",
+       "      <td>credit in cash</td>\n",
+       "      <td>28.69</td>\n",
+       "      <td>28.69</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   trans_id  account_id    type                     operation   amount  \\\n",
+       "0   1548749        5270  credit                credit in cash    32.79   \n",
+       "1   1548750        5270  credit  collection from another bank  1833.98   \n",
+       "2   3393738       11265  credit                credit in cash    40.98   \n",
+       "3   3122924       10364  credit                credit in cash    45.08   \n",
+       "4   1121963        3834  credit                credit in cash    28.69   \n",
+       "\n",
+       "   balance k_symbol bank     account  year  month  day  \n",
+       "0    32.79      NaN  NaN         NaN    93      1   13  \n",
+       "1  1866.76      NaN   IJ  80269753.0    93      1   14  \n",
+       "2    40.98      NaN  NaN         NaN    93      1   14  \n",
+       "3    45.08      NaN  NaN         NaN    93      1   17  \n",
+       "4    28.69      NaN  NaN         NaN    93      1   19  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check for column's data types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 426885 entries, 0 to 30199\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column      Non-Null Count   Dtype  \n",
+      "---  ------      --------------   -----  \n",
+      " 0   trans_id    426885 non-null  int64  \n",
+      " 1   account_id  426885 non-null  int64  \n",
+      " 2   type        426885 non-null  object \n",
+      " 3   operation   350994 non-null  object \n",
+      " 4   amount      426885 non-null  float64\n",
+      " 5   balance     426885 non-null  float64\n",
+      " 6   k_symbol    224222 non-null  object \n",
+      " 7   bank        103065 non-null  object \n",
+      " 8   account     111368 non-null  float64\n",
+      " 9   year        426885 non-null  int64  \n",
+      " 10  month       426885 non-null  int64  \n",
+      " 11  day         426885 non-null  int64  \n",
+      "dtypes: float64(3), int64(5), object(4)\n",
+      "memory usage: 42.3+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(426885, 12)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions.info()\n",
+    "transactions.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trans_id</th>\n",
+       "      <th>account_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>account</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4.268850e+05</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>1.113680e+05</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>426885.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.292993e+06</td>\n",
+       "      <td>2729.963262</td>\n",
+       "      <td>12.865598</td>\n",
+       "      <td>1493.038433</td>\n",
+       "      <td>4.556576e+07</td>\n",
+       "      <td>95.191276</td>\n",
+       "      <td>6.775127</td>\n",
+       "      <td>18.430922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.225990e+06</td>\n",
+       "      <td>2289.052415</td>\n",
+       "      <td>458.252587</td>\n",
+       "      <td>826.269227</td>\n",
+       "      <td>3.061523e+07</td>\n",
+       "      <td>1.050802</td>\n",
+       "      <td>3.587401</td>\n",
+       "      <td>10.236644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-3540.980000</td>\n",
+       "      <td>-697.970000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.104230e+05</td>\n",
+       "      <td>1134.000000</td>\n",
+       "      <td>-116.970000</td>\n",
+       "      <td>928.350000</td>\n",
+       "      <td>1.770720e+07</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8.247440e+05</td>\n",
+       "      <td>2328.000000</td>\n",
+       "      <td>-0.600000</td>\n",
+       "      <td>1290.360000</td>\n",
+       "      <td>4.540222e+07</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.681107e+06</td>\n",
+       "      <td>3531.000000</td>\n",
+       "      <td>8.760000</td>\n",
+       "      <td>1868.460000</td>\n",
+       "      <td>7.165648e+07</td>\n",
+       "      <td>96.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>3.682934e+06</td>\n",
+       "      <td>11382.000000</td>\n",
+       "      <td>3066.070000</td>\n",
+       "      <td>7947.130000</td>\n",
+       "      <td>9.999420e+07</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           trans_id     account_id         amount        balance  \\\n",
+       "count  4.268850e+05  426885.000000  426885.000000  426885.000000   \n",
+       "mean   1.292993e+06    2729.963262      12.865598    1493.038433   \n",
+       "std    1.225990e+06    2289.052415     458.252587     826.269227   \n",
+       "min    1.000000e+00       1.000000   -3540.980000    -697.970000   \n",
+       "25%    4.104230e+05    1134.000000    -116.970000     928.350000   \n",
+       "50%    8.247440e+05    2328.000000      -0.600000    1290.360000   \n",
+       "75%    1.681107e+06    3531.000000       8.760000    1868.460000   \n",
+       "max    3.682934e+06   11382.000000    3066.070000    7947.130000   \n",
+       "\n",
+       "            account           year          month            day  \n",
+       "count  1.113680e+05  426885.000000  426885.000000  426885.000000  \n",
+       "mean   4.556576e+07      95.191276       6.775127      18.430922  \n",
+       "std    3.061523e+07       1.050802       3.587401      10.236644  \n",
+       "min    0.000000e+00      93.000000       1.000000       1.000000  \n",
+       "25%    1.770720e+07      94.000000       4.000000       9.000000  \n",
+       "50%    4.540222e+07      95.000000       7.000000      16.000000  \n",
+       "75%    7.165648e+07      96.000000      10.000000      30.000000  \n",
+       "max    9.999420e+07      98.000000      12.000000      31.000000  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check for missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "trans_id           0\n",
+       "account_id         0\n",
+       "type               0\n",
+       "operation      75891\n",
+       "amount             0\n",
+       "balance            0\n",
+       "k_symbol      202663\n",
+       "bank          323820\n",
+       "account       315517\n",
+       "year               0\n",
+       "month              0\n",
+       "day                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be concluded that missing values exist (but only account is numerical) (in progress!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Statistics (after processing)"
    ]
   },
@@ -326,8 +736,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysing accounts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -439,13 +856,13 @@
        "max    11382.000000    77.000000     97.000000      12.000000    30.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accounts.describe() #eliminar isto?"
+    "accounts.describe()"
    ]
   },
   {
