Update with first and last transaction values

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -1660,6 +1660,208 @@
    "source": [
     "graphs.plot_monthly_payment_per_status(loans_dev)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysing transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trans_id</th>\n",
+       "      <th>account_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>account</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4.268850e+05</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>1.113680e+05</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>426885.000000</td>\n",
+       "      <td>426885.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.292993e+06</td>\n",
+       "      <td>2729.963262</td>\n",
+       "      <td>12.865598</td>\n",
+       "      <td>1493.038433</td>\n",
+       "      <td>4.556576e+07</td>\n",
+       "      <td>95.191276</td>\n",
+       "      <td>6.775127</td>\n",
+       "      <td>18.430922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.225990e+06</td>\n",
+       "      <td>2289.052415</td>\n",
+       "      <td>458.252587</td>\n",
+       "      <td>826.269227</td>\n",
+       "      <td>3.061523e+07</td>\n",
+       "      <td>1.050802</td>\n",
+       "      <td>3.587401</td>\n",
+       "      <td>10.236644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-3540.980000</td>\n",
+       "      <td>-697.970000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.104230e+05</td>\n",
+       "      <td>1134.000000</td>\n",
+       "      <td>-116.970000</td>\n",
+       "      <td>928.350000</td>\n",
+       "      <td>1.770720e+07</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8.247440e+05</td>\n",
+       "      <td>2328.000000</td>\n",
+       "      <td>-0.600000</td>\n",
+       "      <td>1290.360000</td>\n",
+       "      <td>4.540222e+07</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.681107e+06</td>\n",
+       "      <td>3531.000000</td>\n",
+       "      <td>8.760000</td>\n",
+       "      <td>1868.460000</td>\n",
+       "      <td>7.165648e+07</td>\n",
+       "      <td>96.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>3.682934e+06</td>\n",
+       "      <td>11382.000000</td>\n",
+       "      <td>3066.070000</td>\n",
+       "      <td>7947.130000</td>\n",
+       "      <td>9.999420e+07</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           trans_id     account_id         amount        balance  \\\n",
+       "count  4.268850e+05  426885.000000  426885.000000  426885.000000   \n",
+       "mean   1.292993e+06    2729.963262      12.865598    1493.038433   \n",
+       "std    1.225990e+06    2289.052415     458.252587     826.269227   \n",
+       "min    1.000000e+00       1.000000   -3540.980000    -697.970000   \n",
+       "25%    4.104230e+05    1134.000000    -116.970000     928.350000   \n",
+       "50%    8.247440e+05    2328.000000      -0.600000    1290.360000   \n",
+       "75%    1.681107e+06    3531.000000       8.760000    1868.460000   \n",
+       "max    3.682934e+06   11382.000000    3066.070000    7947.130000   \n",
+       "\n",
+       "            account           year          month            day  \n",
+       "count  1.113680e+05  426885.000000  426885.000000  426885.000000  \n",
+       "mean   4.556576e+07      95.191276       6.775127      18.430922  \n",
+       "std    3.061523e+07       1.050802       3.587401      10.236644  \n",
+       "min    0.000000e+00      93.000000       1.000000       1.000000  \n",
+       "25%    1.770720e+07      94.000000       4.000000       9.000000  \n",
+       "50%    4.540222e+07      95.000000       7.000000      16.000000  \n",
+       "75%    7.165648e+07      96.000000      10.000000      30.000000  \n",
+       "max    9.999420e+07      98.000000      12.000000      31.000000  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtain the date of the first and last transaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date of first transaction:  1 / 1 / 93\n",
+      "date of last transaction:  5 / 12 / 98\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "transaction_min_year = transactions.loc[transactions.year == transactions.year.min()]\n",
+    "transaction_min_month = transaction_min_year.loc[transaction_min_year.month == transaction_min_year.month.min()]\n",
+    "transaction_min_day = transaction_min_month.loc[transaction_min_month.day == transaction_min_month.day.min()]\n",
+    "\n",
+    "transaction_max_year = transactions.loc[transactions.year == transactions.year.max()]\n",
+    "transaction_max_month = transaction_max_year.loc[transaction_max_year.month == transaction_max_year.month.max()]\n",
+    "transaction_max_day = transaction_max_month.loc[transaction_max_month.day == transaction_max_month.day.max()]\n",
+    "\n",
+    "print(\"date of first transaction: \", transaction_min_day.day.values[0], \"/\", transaction_min_day.month.values[0], \"/\", transaction_min_day.year.values[0])\n",
+    "print(\"date of last transaction: \", transaction_max_day.day.values[0], \"/\", transaction_max_day.month.values[0], \"/\", transaction_max_day.year.values[0])\n"
+   ]
   }
  ],
  "metadata": {
