Add caption to a plot

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -1764,7 +1764,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Monthly payments (previously named 'payments')"
+   ]
   },
   {
    "cell_type": "code",
