--- a/project.ipynb
+++ b/project.ipynb
@@ -35,9 +35,17 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 50,
+         "execution_count": 1,
          "metadata": {},
          "outputs": [
+            {
+               "name": "stderr",
+               "output_type": "stream",
+               "text": [
+                  "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_36216\\482001259.py:23: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+                  "  transactions_dev = pd.read_csv(DEV_DATA_SOURCE + 'trans.csv', sep=';')\n"
+               ]
+            },
             {
                "data": {
                   "text/html": [
@@ -132,7 +140,7 @@
                      "4     7240       11013  930906  274740        60      4579       1"
                   ]
                },
-               "execution_count": 50,
+               "execution_count": 1,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -194,7 +202,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 51,
+         "execution_count": 2,
          "metadata": {},
          "outputs": [
             {
@@ -292,7 +300,7 @@
                      "4            2  "
                   ]
                },
-               "execution_count": 51,
+               "execution_count": 2,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -316,7 +324,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 52,
+         "execution_count": 3,
          "metadata": {},
          "outputs": [
             {
@@ -407,7 +415,7 @@
                      "4      577     3687  classic    94      2   15"
                   ]
                },
-               "execution_count": 52,
+               "execution_count": 3,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -430,7 +438,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 53,
+         "execution_count": 4,
          "metadata": {},
          "outputs": [
             {
@@ -521,7 +529,7 @@
                      "4          5            5    60      7    3  female"
                   ]
                },
-               "execution_count": 53,
+               "execution_count": 4,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -546,7 +554,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 54,
+         "execution_count": 5,
          "metadata": {},
          "outputs": [
             {
@@ -631,7 +639,7 @@
                      "4        5          5           3  DISPONENT                            2"
                   ]
                },
-               "execution_count": 54,
+               "execution_count": 5,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -658,7 +666,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 55,
+         "execution_count": 6,
          "metadata": {},
          "outputs": [
             {
@@ -801,7 +809,7 @@
                      "4                      1.150649  "
                   ]
                },
-               "execution_count": 55,
+               "execution_count": 6,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -823,7 +831,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 56,
+         "execution_count": 7,
          "metadata": {},
          "outputs": [
             {
@@ -939,7 +947,7 @@
                      "4    93      9    6  "
                   ]
                },
-               "execution_count": 56,
+               "execution_count": 7,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -966,7 +974,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 57,
+         "execution_count": 8,
          "metadata": {},
          "outputs": [
             {
@@ -1100,7 +1108,7 @@
                      "4    28.69      NaN  NaN         NaN    93      1   19  "
                   ]
                },
-               "execution_count": 57,
+               "execution_count": 8,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1130,7 +1138,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 58,
+         "execution_count": 9,
          "metadata": {},
          "outputs": [
             {
@@ -1928,7 +1936,7 @@
                      "49                       406.065714                         865.106753  "
                   ]
                },
-               "execution_count": 58,
+               "execution_count": 9,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -1948,7 +1956,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 59,
+         "execution_count": 10,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -1959,7 +1967,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 60,
+         "execution_count": 11,
          "metadata": {},
          "outputs": [
             {
@@ -2102,7 +2110,7 @@
                      "4                  3.0  "
                   ]
                },
-               "execution_count": 60,
+               "execution_count": 11,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2115,7 +2123,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 61,
+         "execution_count": 12,
          "metadata": {},
          "outputs": [
             {
@@ -2196,7 +2204,7 @@
                      "4            5                  0                     9307"
                   ]
                },
-               "execution_count": 61,
+               "execution_count": 12,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2227,7 +2235,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 62,
+         "execution_count": 13,
          "metadata": {},
          "outputs": [
             {
@@ -2337,7 +2345,7 @@
                      "4                        0                           9307  "
                   ]
                },
-               "execution_count": 62,
+               "execution_count": 13,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2359,7 +2367,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 63,
+         "execution_count": 14,
          "metadata": {},
          "outputs": [
             {
@@ -2494,7 +2502,7 @@
                      "4                        0                           9307  "
                   ]
                },
-               "execution_count": 63,
+               "execution_count": 14,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2513,7 +2521,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 64,
+         "execution_count": 15,
          "metadata": {},
          "outputs": [
             {
@@ -2654,7 +2662,7 @@
                      "4                        0                           9307   missing  "
                   ]
                },
-               "execution_count": 64,
+               "execution_count": 15,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2663,13 +2671,6 @@
             "dispositions = merge.merge_dispositions_cards(dispositions, cards) # cards are not enough; too many nans, check and discard\n",
             "dispositions.head()\n"
          ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "metadata": {},
-         "outputs": [],
-         "source": []
       },
       {
          "cell_type": "markdown",
@@ -2682,7 +2683,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 65,
+         "execution_count": 16,
          "metadata": {},
          "outputs": [
             {
@@ -2886,7 +2887,7 @@
                      "4                           8991   missing  "
                   ]
                },
-               "execution_count": 65,
+               "execution_count": 16,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -2898,7 +2899,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 66,
+         "execution_count": 17,
          "metadata": {},
          "outputs": [
             {
@@ -3121,7 +3122,7 @@
                      "4                             8991  "
                   ]
                },
-               "execution_count": 66,
+               "execution_count": 17,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -3141,7 +3142,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 67,
+         "execution_count": 18,
          "metadata": {},
          "outputs": [
             {
@@ -3413,7 +3414,7 @@
                      "4                            12541  "
                   ]
                },
-               "execution_count": 67,
+               "execution_count": 18,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -3436,7 +3437,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 68,
+         "execution_count": 24,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -3447,12 +3448,45 @@
             "#loans_dev = loans_dev.drop(columns=[\"account_month\", \"account_day\", \"month\", \"day\", \"owner_day\",\\\n",
             "#    \"owner_month\", \"account_districts_profile\", \"owner_districts_profile\", \"transaction_profile\", \"account_district_average_salary\", \"owner_district_average_salary\"])\n",
             "#loans_comp = loans_comp.drop(columns=[\"account_month\", \"account_day\", \"month\", \"day\", \"owner_day\", \\\n",
-            "#    \"owner_month\", \"account_districts_profile\", \"owner_districts_profile\", \"transaction_profile\", \"account_district_average_salary\", \"owner_district_average_salary\"])"
+            "#    \"owner_month\", \"account_districts_profile\", \"owner_districts_profile\", \"transaction_profile\", \"account_district_average_salary\", \"owner_district_average_salary\"])\n",
+            "loans_dev = loans_dev.drop(columns=[\"account_month\", \"account_day\", \"month\", \"day\", \"owner_day\",\\\n",
+            "   \"owner_month\", \"loan_id\", \"monthly_payment\", \"account_district_id\", \"owner_district_id\", \"owner_month\"])\n",
+            "loans_comp = loans_comp.drop(columns=[\"account_month\", \"account_day\", \"month\", \"day\", \"owner_day\",\\\n",
+            "   \"owner_month\", \"loan_id\", \"monthly_payment\", \"account_district_id\", \"owner_district_id\", \"owner_month\"])\n",
+            "   "
          ]
       },
       {
          "cell_type": "code",
-         "execution_count": 69,
+         "execution_count": 25,
+         "metadata": {},
+         "outputs": [
+            {
+               "data": {
+                  "text/plain": [
+                     "Index(['amount', 'duration_months', 'status', 'year', 'account_year',\n",
+                     "       'average_account_credit_per_month', 'average_account_debit_per_month',\n",
+                     "       'average_account_balance_per_month', 'transaction_profile',\n",
+                     "       'number_account_dispositions', 'owner_year', 'owner_districts_profile',\n",
+                     "       'owner_district_average_salary', 'account_districts_profile',\n",
+                     "       'account_district_average_salary', 'age_at_loan',\n",
+                     "       'issuance after transaction', 'monthly issuance', 'weekly issuance',\n",
+                     "       'classic', 'gold', 'junior', 'missing', 'female', 'male'],\n",
+                     "      dtype='object')"
+                  ]
+               },
+               "execution_count": 25,
+               "metadata": {},
+               "output_type": "execute_result"
+            }
+         ],
+         "source": [
+            "loans_dev.columns"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 20,
          "metadata": {},
          "outputs": [
             {
@@ -3730,13 +3764,27 @@
                      "4                            12541            0  "
                   ]
                },
-               "execution_count": 69,
+               "execution_count": 20,
                "metadata": {},
                "output_type": "execute_result"
             }
          ],
          "source": [
             "loans_dev.head(5)"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": null,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "import seaborn as sns\n",
+            "\n",
+            "\n",
+            "corr_values=loans_dev.corr(method='pearson')\n",
+            "print(corr_values['status'])\n",
+            "sns.heatmap(corr_values,cmap=sns.color_palette(\"cubehelix\", as_cmap=True))"
          ]
       },
       {
@@ -3750,7 +3798,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 70,
+         "execution_count": 21,
          "metadata": {},
          "outputs": [
             {
@@ -4078,7 +4126,7 @@
                      "4     0       0        1       0     1  "
                   ]
                },
-               "execution_count": 70,
+               "execution_count": 21,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -4096,6 +4144,37 @@
             "loans_comp = utils.extract_categorical(loans_comp, \"owner_gender\")\n",
             "\n",
             "loans_dev.head()"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 22,
+         "metadata": {},
+         "outputs": [
+            {
+               "data": {
+                  "text/plain": [
+                     "Index(['loan_id', 'amount', 'duration_months', 'monthly_payment', 'status',\n",
+                     "       'year', 'month', 'day', 'account_district_id', 'account_year',\n",
+                     "       'account_month', 'account_day', 'average_account_credit_per_month',\n",
+                     "       'average_account_debit_per_month', 'average_account_balance_per_month',\n",
+                     "       'transaction_profile', 'number_account_dispositions',\n",
+                     "       'owner_district_id', 'owner_year', 'owner_month', 'owner_day',\n",
+                     "       'owner_districts_profile', 'owner_district_average_salary',\n",
+                     "       'account_districts_profile', 'account_district_average_salary',\n",
+                     "       'age_at_loan', 'issuance after transaction', 'monthly issuance',\n",
+                     "       'weekly issuance', 'classic', 'gold', 'junior', 'missing', 'female',\n",
+                     "       'male'],\n",
+                     "      dtype='object')"
+                  ]
+               },
+               "execution_count": 22,
+               "metadata": {},
+               "output_type": "execute_result"
+            }
+         ],
+         "source": [
+            "loans_dev.columns"
          ]
       },
       {
@@ -4860,7 +4939,7 @@
    ],
    "metadata": {
       "kernelspec": {
-         "display_name": "Python 3.11.0 64-bit",
+         "display_name": "Python 3.10.7 64-bit",
          "language": "python",
          "name": "python3"
       },
@@ -4874,12 +4953,12 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.10.8"
+         "version": "3.10.7"
       },
       "orig_nbformat": 4,
       "vscode": {
          "interpreter": {
-            "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+            "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
          }
       }
    },
